--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 :root {
     --fuenteHeading: 'Times New Roman', Times, serif;
     --fuenteNombre: 'Clicker Script', sans-serif;
-    --fuenteParrafos: 'Times New Roman', Times, serif;
+    --fuenteParrafos: Arial, Helvetica, sans-serif;
 
     --primario: #504e70;
     --primarioOscuro: #302e4d;
@@ -13,9 +13,11 @@
 /*  Globales **/
 html {
     font-size: 62.5%;
-    box-sizing: border-box; /* Hack para Box Model **/
+    box-sizing: border-box;
+    /* Hack para Box Model **/
     scroll-snap-type: y mandatory;
 }
+
 /** Scroll Snap**/
 .servicios,
 .navegacion-principal,
@@ -24,21 +26,27 @@ html {
     scroll-snap-stop: always;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 body {
-    font-size: 16px; /* 1rem = 10px */
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+    /* 1rem = 10px */
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     display: flex;
     height: 100vh;
+    background: #f2f2fc;
 }
 
 .main-container {
     display: flex;
     width: 100%;
 }
+
 .contenedor {
     flex: 1;
     padding: 20px;
@@ -63,6 +71,7 @@ h2 {
     margin-top: 10rem;
     color: var(--primarioOscuro);
 }
+
 h3 {
     font-size: 2rem;
     color: var(--primarioOscuro);
@@ -72,97 +81,322 @@ h3 span {
     color: var(--secundario);
 }
 
+@media (min-width: 768px) {
 
-/* LAYOUT */
+    /* LAYOUT */
+    .menu-dashboard {
+        width: 100px;
+        height: 100%;
+        background: rosybrown;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        transition: max-width .3s ease;
+    }
 
-.menu-dashboard {
-    width: 250px;
-    height: 100%;
-    background: rosybrown;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    transition: max-width .3s ease;
+    .top-menu {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .top-menu .logo {
+        display: flex;
+        align-items: center;
+    }
+
+    .top-menu .logo img {
+        width: 40px;
+    }
+
+    .menu a {
+        text-decoration: none;
+        color: var(--primarioOscuro);
+    }
+
+    /* ENLACES MENU */
+
+    .menu .enlace {
+        width: 100%;
+        padding: 20px 0 20px 17px;
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        cursor: pointer;
+        font-size: 20px;
+        transition: all .3s ease;
+        margin-top: 2rem;
+    }
+
+    .menu .enlace:hover {
+        background: var(--secundario);
+    }
+
+    .menu .enlace i {
+        margin-right: 2rem;
+        font-size: 2.5rem;
+    }
+
+    .menu .enlace span {
+        opacity: 0;
+    }
+
+    .contenido-hero a,
+    .contenido-hero h1 {
+        margin-left: 10rem;
+    }
+
+    /* párrafo imagen */
+    .content-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+    }
+
+    .content-wrapper p {
+        max-width: 50%;
+        margin-right: 20px;
+        margin-left: 10rem;
+        font-size: 1.8rem;
+        color: var(--primario);
+        line-height: 3rem;
+    }
+
+    .content-wrapper img {
+        max-width: 30%;
+        height: auto;
+    }
+
+    .boton {
+        background-color: var(--secundario);
+        color: var(--blanco);
+        padding: 1rem 3rem;
+        font-size: 2rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: bold;
+        border-radius: .5rem;
+        width: 90%;
+        text-align: center;
+        border: none;
+    }
+
+    /*Sobre mi*/
+    .sobre-mi__titulos {
+        margin-left: 10rem;
+    }
+
+    .sobre-mi p {
+        max-width: 80%;
+        margin: 0 auto;
+        font-size: 1.8rem;
+        color: var(--primario);
+        line-height: 3rem;
+    }
 }
 
-.top-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+@media (max-width: 767px) {
+
+    .menu-dashboard,
+    .menu {
+        display: none;
+    }
+
+    /* párrafo imagen */
+    .content-wrapper {
+        margin-bottom: 1rem;
+    }
+
+    .content-wrapper p {
+        font-size: 1.8rem;
+        color: var(--primario);
+        line-height: 3rem;
+    }
+
+    .content-wrapper img {
+        display: none;
+    }
+
+    .boton {
+        display: block;
+        margin-top: 4rem;
+        background-color: var(--secundario);
+        color: var(--blanco);
+        padding: 1rem 3rem;
+        font-size: 2rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: bold;
+        border-radius: .5rem;
+        width: 90%;
+        text-align: center;
+        border: none;
+
+    }
+
+    /*Sobre mi*/
+
+    .sobre-mi p {
+        max-width: 90%;
+        margin: 0 auto;
+        font-size: 1.8rem;
+        color: var(--primario);
+        line-height: 3rem;
+    }
 }
 
-.top-menu .logo {
-    display: flex;
-    align-items: center;
+
+@media (min-width: 985px) {
+    .fichas {
+        display: flex;
+        justify-content: space-between;
+        /* Espacia el contenido horizontalmente */
+        margin-top: 10rem;
+        margin-bottom: 1rem;
+    }
+
+    .primera-seccion,
+    .segunda-seccion,
+    .tercera-seccion {
+        max-width: 1fr;
+        /* O ajusta según tus necesidades */
+        margin-right: 20px;
+        /* Espacio entre el párrafo y la imagen */
+        font-size: 1.8rem;
+        color: var(--primario);
+        background-color: var(--blanco);
+        padding: 3rem;
+        border-radius: 1rem;
+    }
+
+    .fichas__contenedor {
+        display: flex;
+        align-items: center;
+    }
+
+    .fichas__clave,
+    .fichas__parrafo {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .fichas__parrafo {
+        margin-left: 1rem;
+    }
+
+    hr {
+        margin-top: -1rem;
+    }
+
+    .botones {
+        margin-top: 5rem;
+    }
+
+    /*Contacto*/
+    .contacto {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10rem;
+    }
+
+    .contacto__pregunta {
+        text-align: center;
+        color: var(--secundario);
+    }
+
+    .contacto__telegram,
+    .contacto__github,
+    .contacto__email,
+    .contacto__linkedin {
+        text-align: center;
+    }
+
+    .contacto__icono {
+        font-size: 5rem;
+        color: var(--secundario);
+    }
+
+    .contacto p {
+        color: var(--primarioOscuro);
+        font-weight: bold;
+    }
 }
 
-.top-menu .logo img {
-    width: 40px;
+@media (max-width: 984px) {
+    .fichas {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        display: block;
+        width: 90%;
+        /* Espacia el contenido horizontalmente */
+        margin-top: 10rem;
+        margin-bottom: 1rem;
+    }
+
+    .primera-seccion,
+    .segunda-seccion,
+    .tercera-seccion {
+        font-size: 1.8rem;
+        color: var(--primario);
+        background-color: var(--blanco);
+        padding: 3rem;
+        border-radius: 1rem;
+        margin-top: 2rem;
+    }
+
+    .fichas__clave,
+    .fichas__parrafo {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .botones {
+        margin-top: 5rem;
+    }
+
+    /*Contacto*/
+    .contacto {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10rem;
+    }
+
+    .contacto__pregunta {
+        text-align: center;
+        color: var(--secundario);
+    }
+
+    .contacto__telegram,
+    .contacto__github,
+    .contacto__email,
+    .contacto__linkedin {
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    .contacto__icono {
+        font-size: 5rem;
+        color: var(--secundario);
+    }
+
+    .contacto p {
+        color: var(--primarioOscuro);
+        font-weight: bold;
+    }
 }
 
-/* ENLACES MENU */
 
-.menu .enlace {
-    width: 100%;
-    padding: 20px 0 20px 17px;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    cursor: pointer;
-    font-size: 20px;
-    transition: all .3s ease;
-    margin-top: 2rem;
-}
 
-.menu .enlace:hover {
-    background: var(--secundario);
-}
 
-.menu .enlace i {
-    margin-right: 2rem;
-    font-size: 2.5rem;
-}
 
-.menu .enlace span {
-    opacity: 0;
-}
-
-/* párrafo imagen */
-.content-wrapper {
-    display: flex;
-    align-items: center; /* Centra verticalmente el contenido */
-    justify-content: space-between; /* Espacia el contenido horizontalmente */
-    margin-bottom: 1rem;
-}
-
-.content-wrapper p {
-    max-width: 60%; /* O ajusta según tus necesidades */
-    margin-right: 20px; /* Espacio entre el párrafo y la imagen */
-    font-size: 1.8rem;
-    color: var(--primario);
-}
-
-.content-wrapper img {
-    max-width: 30%; /* O ajusta según tus necesidades */
-    height: auto; /* Mantiene la proporción de la imagen */
-}
-
-.boton {
-    background-color: var(--secundario);
-    color: var(--blanco);
-    padding: 1rem 3rem;
-    font-size: 2rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-radius: .5rem;
-    width: 90%;
+/** Footer **/
+.footer {
+    margin-top: 10rem;
     text-align: center;
-    border: none;
-}
-.sobre-mi p {
-    font-size: 1.8rem;
     color: var(--primario);
 }
-
