--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,6 +116,7 @@ h3 span {
 
     /* ENLACES MENU */
 
+
     .menu .enlace {
         width: 100%;
         padding: 20px 0 20px 17px;
@@ -141,60 +142,6 @@ h3 span {
     .menu .enlace span {
         opacity: 0;
     }
-
-    .contenido-hero a,
-    .contenido-hero h1 {
-        margin-left: 10rem;
-    }
-
-    /* párrafo imagen */
-    .content-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 1rem;
-    }
-
-    .content-wrapper p {
-        max-width: 50%;
-        margin-right: 20px;
-        margin-left: 10rem;
-        font-size: 1.8rem;
-        color: var(--primario);
-        line-height: 3rem;
-    }
-
-    .content-wrapper img {
-        max-width: 30%;
-        height: auto;
-    }
-
-    .boton {
-        background-color: var(--secundario);
-        color: var(--blanco);
-        padding: 1rem 3rem;
-        font-size: 2rem;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-weight: bold;
-        border-radius: .5rem;
-        width: 90%;
-        text-align: center;
-        border: none;
-    }
-
-    /*Sobre mi*/
-    .sobre-mi__titulos {
-        margin-left: 10rem;
-    }
-
-    .sobre-mi p {
-        max-width: 80%;
-        margin: 0 auto;
-        font-size: 1.8rem;
-        color: var(--primario);
-        line-height: 3rem;
-    }
 }
 
 @media (max-width: 767px) {
@@ -203,200 +150,109 @@ h3 span {
     .menu {
         display: none;
     }
-
-    /* párrafo imagen */
-    .content-wrapper {
-        margin-bottom: 1rem;
-    }
-
-    .content-wrapper p {
-        font-size: 1.8rem;
-        color: var(--primario);
-        line-height: 3rem;
-    }
-
-    .content-wrapper img {
-        display: none;
-    }
-
-    .boton {
-        display: block;
-        margin-top: 4rem;
-        background-color: var(--secundario);
-        color: var(--blanco);
-        padding: 1rem 3rem;
-        font-size: 2rem;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-weight: bold;
-        border-radius: .5rem;
-        width: 90%;
-        text-align: center;
-        border: none;
-
-    }
-
-    /*Sobre mi*/
-
-    .sobre-mi p {
-        max-width: 90%;
-        margin: 0 auto;
-        font-size: 1.8rem;
-        color: var(--primario);
-        line-height: 3rem;
-    }
 }
 
-
-@media (min-width: 985px) {
-    .fichas {
-        display: flex;
-        justify-content: space-between;
-        /* Espacia el contenido horizontalmente */
-        margin-top: 10rem;
-        margin-bottom: 1rem;
-    }
-
-    .primera-seccion,
-    .segunda-seccion,
-    .tercera-seccion {
-        max-width: 1fr;
-        /* O ajusta según tus necesidades */
-        margin-right: 20px;
-        /* Espacio entre el párrafo y la imagen */
-        font-size: 1.8rem;
-        color: var(--primario);
-        background-color: var(--blanco);
-        padding: 3rem;
-        border-radius: 1rem;
-    }
-
-    .fichas__contenedor {
-        display: flex;
-        align-items: center;
-    }
-
-    .fichas__clave,
-    .fichas__parrafo {
-        display: inline-block;
-        vertical-align: middle;
-    }
-
-    .fichas__parrafo {
-        margin-left: 1rem;
-    }
-
-    hr {
-        margin-top: -1rem;
-    }
-
-    .botones {
-        margin-top: 5rem;
-    }
-
-    /*Contacto*/
-    .contacto {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10rem;
-    }
-
-    .contacto__pregunta {
-        text-align: center;
-        color: var(--secundario);
-    }
-
-    .contacto__telegram,
-    .contacto__github,
-    .contacto__email,
-    .contacto__linkedin {
-        text-align: center;
-    }
-
-    .contacto__icono {
-        font-size: 5rem;
-        color: var(--secundario);
-    }
-
-    .contacto p {
-        color: var(--primarioOscuro);
-        font-weight: bold;
-    }
-}
-
-@media (max-width: 984px) {
-    .fichas {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        display: block;
-        width: 90%;
-        /* Espacia el contenido horizontalmente */
-        margin-top: 10rem;
-        margin-bottom: 1rem;
-    }
-
-    .primera-seccion,
-    .segunda-seccion,
-    .tercera-seccion {
-        font-size: 1.8rem;
-        color: var(--primario);
-        background-color: var(--blanco);
-        padding: 3rem;
-        border-radius: 1rem;
-        margin-top: 2rem;
-    }
-
-    .fichas__clave,
-    .fichas__parrafo {
-        display: inline-block;
-        vertical-align: middle;
-    }
-
-    .botones {
-        margin-top: 5rem;
-    }
-
-    /*Contacto*/
-    .contacto {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 10rem;
-    }
-
-    .contacto__pregunta {
-        text-align: center;
-        color: var(--secundario);
-    }
-
-    .contacto__telegram,
-    .contacto__github,
-    .contacto__email,
-    .contacto__linkedin {
-        text-align: center;
-        margin-top: 2rem;
-    }
-
-    .contacto__icono {
-        font-size: 5rem;
-        color: var(--secundario);
-    }
-
-    .contacto p {
-        color: var(--primarioOscuro);
-        font-weight: bold;
-    }
-}
-
-
-
-
-
-/** Footer **/
-.footer {
-    margin-top: 10rem;
-    text-align: center;
+.content-wrapper p,
+.sobre-mi__parrafo p {
     color: var(--primario);
+    line-height: 2.5rem;
+    margin-bottom: 5rem;
+}
+
+
+.content-wrapper img {
+    width: 100%;
+
+}
+
+@media (min-width: 1440px) {
+    .content-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .fichas {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+    }
+
+    .botones {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 5rem;
+    }
+}
+
+.boton {
+    display: inline-block;
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+    border: none;
+}
+
+.fichas .primera-seccion,
+.fichas .segunda-seccion {
+    background-color: var(--blanco);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(184, 180, 184, 1);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(184, 180, 184, 1);
+    box-shadow: 10px 10px 5px 0px rgba(184, 180, 184, 1);
+    padding: 3rem;
+    border-radius: 2rem;
+    margin-bottom: 3rem;
+}
+
+.botones a {
+    margin-bottom: 1rem;
+}
+
+.contacto__pregunta {
+    text-align: center;
+    color: var(--secundario);
+    margin-bottom: 10rem;
+}
+
+.contacto {
+    text-align: center;
+}
+
+.contacto .contacto__telegram,
+.contacto .contacto__email,
+.contacto .contacto__github,
+.contacto .contacto__linkedin {
+    margin-bottom: 3rem;
+    line-height: 1rem;
+    color: var(--primarioOscuro);
+    font-weight: bold;
+}
+
+.contacto .contacto__icono {
+    color: var(--secundario);
+}
+
+@media (min-width: 768px) {
+    .contacto {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 1440px) {
+    .contacto {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+.footer {
+    text-align: center;
+    margin-top: 5rem;
 }
