se agregaron los proyectos en video

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,3 +260,14 @@ h3 span {
     text-align: center;
     margin-top: 5rem;
 }
+
+.wordpress {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+}
+
+video{
+    width: 100%;
+    margin-bottom: 2rem;
+}
