--- a/styles/styles.css
+++ b/styles/styles.css
@@ -276,3 +276,28 @@ iframe{
     margin-top: 5rem;
 }
 
+/*fachada videos*/
+.video-container {
+    position: relative;
+    width: 560px; /* Ancho del video */
+    height: 315px; /* Altura del video */
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.1); /* Fondo semitransparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+}
+
+.play-button {
+    background-color: rgba(255, 255, 255, 0.6);
+    color: black;
+    border-radius: 50%;
+    padding: 20px;
+    font-size: 24px;
+    margin: 1rem;
+}
+
+
+
+
